stampati membri in console

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <main>
+        <div id="team"></div>
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
